Implemented arbitrary generation of files and extensions